@@ -1,9 +1,6 @@
 
 	<h3>Troubleshooting</h3>
 
-   <p>For problems and solutions see
-<a href="http://lilypond.org/wiki?TroubleshootingWindows">Troubleshooting Windows</a>
-
    <p>If you have a problem running LilyPond, you should first make sure
 that you are running the latest version.  Chances are, that your
 problem was already reported and fixed in a newer release.  Click
