@@ -1,5 +1,8 @@
 2003-07-31  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/download/using.html: Make links local, point directly to
+	Tutorial.
+
 	* site/download/index.html: Add Cygwin info; run indent.
 
 2003-07-30  Jan Nieuwenhuizen  <janneke@gnu.org>
